--- a/greens_project/datdemo/firstdata/templates/index.html
+++ b/greens_project/datdemo/firstdata/templates/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link 
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
+   <style> 
+    body{
+      background-color: rgb(127, 225, 255);
+    }
+    .i-am-centered{ 
+           margin: auto; 
+           max-width: 300px; 
+           padding-top: 20%; 
+       } 
+   </style> 
+
+
 </head>
 <body>
+  <h2>Welcome to Nirulabs.com</h2>
+  <div class="i-am-centered">
+    
+     {{form}}
+     <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+  
     
    
 </body>
